--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
                   <a class="hero-title nav-button" href="#about">About</a>
                   <a class="hero-title nav-button" href="#projects">Projects</a>
                   <a class="hero-title nav-button" href="#coursework">Coursework</a>
-                  <a class="hero-title nav-button" href="#languages">Languages</a>
+                  <a class="hero-title nav-button" href="#languages">Skills</a>
                   <a class="hero-title nav-button" href="#contact">Contact</a>
                   <a class="hero-title nav-button" href="#socials">Links</a>
               </div>
@@ -145,49 +145,6 @@
       <div class="container">
         <div class="project-wrapper">
           <h2 class="section-title dark-blue-text">Programming Projects</h2>
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">My Personal Website</h3>
-                <div>
-                  <p class="mb-4">
-                    You're looking at it right now! My personal website is programmed in <strong>HTML, CSS, 
-                    Javascript, and Bootstrap</strong>. It contains information about me, my 
-                    resume, projects, socials, and contact information.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/mrapi00/Personal-Website"
-                >
-                  Github Link
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer" href="#!" target="_blank">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project4.png"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
           
           <!-- Notice: each .row is a project -->
           <div class="row">
@@ -374,6 +331,50 @@
             </div>
           </div>
           <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">My Personal Website</h3>
+                <div>
+                  <p class="mb-4">
+                    You're looking at it right now! My personal website is programmed in <strong>HTML, CSS, 
+                    Javascript, and Bootstrap</strong>. It contains information about me, my 
+                    resume, projects, socials, and contact information.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/mrapi00/Personal-Website"
+                >
+                  Github Link
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer" href="#!" target="_blank">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/project4.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
         </div>
       </div>
     </section>
@@ -406,7 +407,7 @@
     <!-- **** Languages Section **** -->
     <section id="languages">
       <div class="container">
-        <h2 class="section-title load-hidden">Programming Languages</h2>
+        <h2 class="section-title load-hidden">Skills</h2>
         <div class="row about-wrapper">
           <div class="col-md-4 col-sm-12">
             <div class="about-wrapper__image load-hidden">
@@ -415,15 +416,17 @@
                 class="rounded shadow-lg img-fluid"
                 height="auto"
                 width="500px"
-                src="assets/pl1.jfif"
+                src="assets/pl1.jpg"
                 alt="Profile Image"
               />
             </div>
           </div>
           <div class="col-md-8 col-sm-12">
             <div class="about-wrapper__info load-hidden">
-              <p class="about-wrapper__info-text" style=" text-align: left">
-                Languages: Java, C, Python, SQL, HTML, CSS, Javascript, R, Git/Github, Verilog, Microsoft Excel <br>
+              <p class="about-wrapper__info-text" style=" text-align: left; line-height: 2;">
+                <strong>Languages:</strong> Java, Python, C, HTML, CSS, Javascript, Typescript, SQL, R, Verilog <br>
+                <strong>Frameworks/Libaries:</strong> Flask, Node.js, NumPy, PyQt5, Socket, jQuery, Bootstrap <br>
+                <strong>Tools:</strong> Google Firebase, PostgreSQL, Git/GitHub, Heroku
               </p>
             </div>
           </div>
