--- a/src/index.html
+++ b/src/index.html
@@ -150,7 +150,7 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Princeton University Computer (PUnC) Project</h3>
+                <h3 class="project-wrapper__text-title">LC3 Instruction Set Computer</h3>
                 <div>
                   <p class="mb-4">
                     For my Digital Logic class, we were tasked with programming a microprocessor in <strong> Verilog </strong>that implements the LC3 
@@ -291,7 +291,7 @@
                 <h3 class="project-wrapper__text-title">Seam Carving Project</h3>
                 <div>
                   <p class="mb-4">
-                    I learned to implement seam carving in my data structures and algorithms class, 
+                    I implemented seam carving for my data structures and algorithms class, 
                     programmed <strong>Java</strong>. 
                     Seam-carving is a content-aware image resizing technique where 
                     the image is reduced in size by one pixel of height (or width) at a time. 
