--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
                 <em>software engineer</em> on The Daily Princetonian (school newspaper), and <em>software subteam lead</em> on 
                 Princeton Rocketry Club. My relevant work experience includes being a <em>Software Developer Research Assistant</em> at 
                 Princeton's Intelligence and Adaptation Lab, an <em>Algorithms & Data Structures Grader</em> for 
-                Princeton's Computer Science Department, and <em> a Data and Program Evaluation Intern </em> at the Centers
+                Princeton's Computer Science Department, and <em> a Data Science Intern </em> at the Centers
                 for Disease Control and Prevention (CDC).
                 I am passionate about <strong> software engineering</strong> as a career, because I love programming, problem solving, 
                 and creating an impact through software development!
