--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
                     As a part of my work as a research assistant for Princeton's Intelligent Performance and Adaptation Lab, I contributed
                     to the development of a web version for an motor-leaning based Unity experiment called <em>Choose Your Target</em>. This 
                     required writing software in <strong>Unity C#</strong> which fetches trial and orders settings from <strong>Google Firebase</strong> 
-                    using <strong>REST API</strong>, previous stored as local data as CSV files. Also wrote a script in 
+                    using <strong>REST API</strong>, which was previously stored as local CSV files. Also wrote a script in 
                     <strong>Javascript (Google Apps Script) </strong> which uploads these CSV data into Firebase. 
                   </p>
                 </div>
