--- a/src/index.html
+++ b/src/index.html
@@ -189,10 +189,10 @@
                 <div>
                   <p class="mb-4">
                     As a part of my work as a research assistant for Princeton's Intelligent Performance and Adaptation Lab, I contributed
-                    to the development of a web version for an motor-leaning based Unity experiment called <em>Choose Your Target</em>. This 
-                    required writing software in <strong>Unity C#</strong> which fetches trial and orders settings from <strong>Google Firebase</strong> 
-                    using <strong>REST API</strong>, which was previously stored as local CSV files. Also wrote a script in 
-                    <strong>Javascript (Google Apps Script) </strong> which uploads these CSV data into Firebase. 
+                    to the development of a web version for an motor-leaning based Unity experiment called <em>Choose Your Target</em>.I wrote 
+                    software in <strong>Unity C#</strong> which fetches trial and orders settings from <strong>Google Firebase</strong> 
+                    using <strong>REST API</strong>, which was previously stored as local CSV files. I created the script in 
+                    <strong>Javascript (Google Apps Script) </strong> which uploaded these CSV data into Firebase. 
                   </p>
                 </div>
                 <a
@@ -207,7 +207,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer">
+                <a rel="noreferrer" href="https://realtimedatabase-39b26.web.app/" target="_blank">
                   <div
                     data-tilt
                     data-tilt-max="4"
