--- a/src/index.html
+++ b/src/index.html
@@ -189,10 +189,10 @@
                 <div>
                   <p class="mb-4">
                     As a part of my work as a research assistant for Princeton's Intelligent Performance and Adaptation Lab, I contributed
-                    to the development of a web version for an motor-leaning based Unity experiment called <em>Choose Your Target</em>.I wrote 
+                    to the development of a web version for an motor-leaning based Unity experiment called <em>Choose Your Target</em>. I wrote 
                     software in <strong>Unity C#</strong> which fetches trial and orders settings from <strong>Google Firebase</strong> 
-                    using <strong>REST API</strong>, which was previously stored as local CSV files. I created the script in 
-                    <strong>Javascript (Google Apps Script) </strong> which uploaded these CSV data into Firebase. 
+                    using <strong>REST API</strong>, which was previously stored as local CSV files. I created a script in 
+                    <strong>Javascript (Google Apps Script) </strong> which uploads and deletes these CSV data into Firebase. 
                   </p>
                 </div>
                 <a
