--- a/src/index.html
+++ b/src/index.html
@@ -188,8 +188,8 @@
                 <h3 class="project-wrapper__text-title">Choose Your Target</h3>
                 <div>
                   <p class="mb-4">
-                    As a part of my work as a research assistant for Princeton's Intelligent Performance and Adaptation Lab, I contributed
-                    to the development of a web version for an motor-leaning based Unity experiment called <em>Choose Your Target</em>. I wrote 
+                    As a part of my work as a research assistant for Princeton's Intelligent Performance and Adaptation Lab, I worked
+                    on the development of a web version for an motor-learning based Unity experiment called <em>Choose Your Target</em>. I wrote 
                     software in <strong>Unity C#</strong> which fetches trial and orders settings from <strong>Google Firebase</strong> 
                     using <strong>REST API</strong>, which was previously stored as local CSV files. I created a script in 
                     <strong>Javascript (Google Apps Script) </strong> which uploads and deletes these CSV data into Firebase. 
@@ -277,12 +277,58 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Seam Carving Project</h3>
+                <div>
+                  <p class="mb-4">
+                    In <strong>Java</strong>, I programmed the seam-carving algorithm, which is a content-aware image resizing 
+                    technique where the image is reduced in size by one pixel of height (or width) at a time. 
+                    Unlike scaling or cropping, seam carving preserves the most important features
+                    of the image. The project implements dynamic programming and backtracking to find
+                    the seam which can be removed. 
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/mrapi00/Seam-Carving"
+                >
+                  Github Link
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/project5.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">Symbol Table Linked List and Hash Table Implementation</h3>
                 <div>
                   <p class="mb-4">
                     A symbol table is a fundamental data structure used for key-value pairs. I implemented a symbol table 
                     in <strong>C</strong> with a linked list implementation and a resizing hash table (more efficient) 
-                    implementation. Programming in C required carefulness with dynamically allocated memory.
+                    implementation with dynamically allocated memory.
                   </p>
                 </div>
                 <a
@@ -328,8 +374,7 @@
                     various power electronic topologies (diode-rectifier,
                     buck converter, boost converter, flyback converter), user-interactive to ask for circuit parameters, 
                     and computes the output current and output voltage, and ripple inductor current, ripple capacitor
-                    voltage, and peak switch voltage/currents (for design choice). In the final design project for this class,
-                    I used my Java program to check that I used parameters of the right values to meet design specifications. 
+                    voltage, and peak switch voltage/currents (for design choice).  
                   </p>
                 </div>
                 <a
@@ -356,52 +401,6 @@
                       alt="Project Image"
                       class="img-fluid"
                       src="assets/project3.gif"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Seam Carving Project</h3>
-                <div>
-                  <p class="mb-4">
-                    In <strong>Java</strong>, I programmed the Seam-carving algorithm, which is a content-aware image resizing 
-                    technique where the image is reduced in size by one pixel of height (or width) at a time. 
-                    Unlike scaling or cropping, seam carving preserves the most important features
-                    of the image. The project implements dynamic programming and backtracking to find
-                    the seam which can be removed. 
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/mrapi00/Seam-Carving"
-                >
-                  Github Link
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project5.png"
                     />
                   </div>
                 </a>
