--- a/src/index.html
+++ b/src/index.html
@@ -185,6 +185,50 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Princeton Registrar Application</h3>
+                <div>
+                  <p class="mb-4">
+                    I created a <strong>Python</strong> graphical user interface (using PyQt5) that allows Princeton students and other interested parties 
+                    to query a an <strong>SQLite</strong> database of classes and courses offered during a semester.  The application handles server-side 
+                    concurrency with multiprocessing, and client-side concurrency with multithreading.
+                  </p>
+                </div>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="https://github.com/mrapi00/Registrar_App_GUI/"
+                >
+                  Github Link
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image load-hidden">
+                <a rel="noreferrer">
+                  <div
+                    data-tilt
+                    data-tilt-max="4"
+                    data-tilt-glare="true"
+                    data-tilt-max-glare="0.5"
+                    class="thumbnail rounded js-tilt"
+                  >
+                    <img
+                      alt="Project Image"
+                      class="img-fluid"
+                      src="assets/GUI_picture.png"
+                    />
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          <!-- /END Project -->
+
+          <!-- Notice: each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
                 <h3 class="project-wrapper__text-title">Choose Your Target</h3>
                 <div>
                   <p class="mb-4">
@@ -416,7 +460,7 @@
                 <h3 class="project-wrapper__text-title">My Personal Website</h3>
                 <div>
                   <p class="mb-4">
-                    You're looking at it right now! My personal website is programmed in <strong>HTML, CSS (Boostrap), 
+                    You're looking at it right now! My personal website is programmed in <strong>HTML, CSS (Bootstrap), 
                     and Javascript</strong>. It's a responsive single page website, and contains information about me, 
                     my resume, projects, socials, and contact information.
                   </p>
@@ -468,7 +512,7 @@
                 <strong>COS333 </strong> Full-Stack Programming Techniques (Python, SQL, HTML, CSS, Javascript)<br>
                 <strong>COS418 </strong> Distributed Systems (Go) <br>
                 <strong>COS423 </strong> Theory of Algorithms <br>
-                <strong>COS316 </strong> Computer System Design (Go) <br>
+                <strong>COS302 </strong> Mathematics for Machine Learning (Python) <br>
                 <strong>COS324 </strong> Intro Machine Learning (Python)<br>
                 <strong>COS226 </strong> Algorithms and Data Structures (Java)<br>
                 <strong>COS217 </strong> Systems Programming (C, x86 Assembly)<br>
