--- a/src/index.html
+++ b/src/index.html
@@ -189,7 +189,7 @@
                 <div>
                   <p class="mb-4">
                     I created a <strong>Python</strong> graphical user interface (using PyQt5) that allows Princeton students and other interested parties 
-                    to query a an <strong>SQLite</strong> database of classes and courses offered during a semester.  The application handles server-side 
+                    to query an <strong>SQLite</strong> database of classes and courses offered during a semester.  The application handles server-side 
                     concurrency with multiprocessing, and client-side concurrency with multithreading.
                   </p>
                 </div>
@@ -355,50 +355,6 @@
                       alt="Project Image"
                       class="img-fluid"
                       src="assets/project5.png"
-                    />
-                  </div>
-                </a>
-              </div>
-            </div>
-          </div>
-          <!-- /END Project -->
-
-          <!-- Notice: each .row is a project -->
-          <div class="row">
-            <div class="col-lg-4 col-sm-12">
-              <div class="project-wrapper__text load-hidden">
-                <h3 class="project-wrapper__text-title">Symbol Table Linked List and Hash Table Implementation</h3>
-                <div>
-                  <p class="mb-4">
-                    A symbol table is a fundamental data structure used for key-value pairs. I implemented a symbol table 
-                    in <strong>C</strong> with a linked list implementation and a resizing hash table (more efficient) 
-                    implementation with dynamically allocated memory.
-                  </p>
-                </div>
-                <a
-                  rel="noreferrer"
-                  target="_blank"
-                  class="cta-btn cta-btn--hero"
-                  href="https://github.com/mrapi00/Symbol-Table"
-                >
-                  Github Link
-                </a>
-              </div>
-            </div>
-            <div class="col-lg-8 col-sm-12">
-              <div class="project-wrapper__image load-hidden">
-                <a rel="noreferrer">
-                  <div
-                    data-tilt
-                    data-tilt-max="4"
-                    data-tilt-glare="true"
-                    data-tilt-max-glare="0.5"
-                    class="thumbnail rounded js-tilt"
-                  >
-                    <img
-                      alt="Project Image"
-                      class="img-fluid"
-                      src="assets/project2.png"
                     />
                   </div>
                 </a>
