--- a/src/index.html
+++ b/src/index.html
@@ -99,8 +99,11 @@
               </p>
               <p class="about-wrapper__info-text">
                 I'm a junior at Princeton University studying <strong> Computer Science </strong>
-                and pursuing a minor in <strong> Statistics and Machine Learning</strong>. My relevant work experience includes 
-                being a <em>Software Developer Research Assistant</em> at Princeton's Intelligence and Adaptation Lab, an 
+                and pursuing a minor in Statistics and Machine Learning. 
+              </p>
+              <p class="about-wrapper__info-text">
+                My relevant work experience includes 
+                being a <em>Software Engineering Intern</em> at L3Harris Technologies, <em>Software Developer Research Assistant</em> at Princeton's Intelligence and Adaptation Lab, an 
                 <em>Algorithms & Data Structures Grader</em> for Princeton's Computer Science Department, and <em> a Data 
                 Science Intern </em> at the Centers for Disease Control and Prevention (CDC). On campus, I'm involved as a 
                 <em>software engineer</em> on The Daily Princetonian (school newspaper), and <em>software subteam lead</em> on 
@@ -190,7 +193,7 @@
                   <p class="mb-4">
                     I created a <strong>Python</strong> graphical user interface (using PyQt5) that allows Princeton students and other interested parties 
                     to query an <strong>SQLite</strong> database of classes and courses offered during a semester.  The application handles server-side 
-                    concurrency with multiprocessing, and client-side concurrency with multithreading.
+                    concurrency and client-side concurrency. 
                   </p>
                 </div>
                 <a
